fix getStartTime()